--- a/index.html
+++ b/index.html
@@ -5,24 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark14-StockReturn</title>
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
     <div class="container">
-        <label for="initial-price">Initial Price
-            <input type="text" id="initial-price" placeholder="Enter initial price here"/>
+        <h1>You Invest We Calculate!💰</h1>
+        <div class="inputField">
+        <label style="margin-right:3.5rem;" for="initial-price">Initial Price
+            <input id="initial-price">
         </label>
-        <label for="stock-quantity">Quantity of Stocks
-            <input type="text" id="stock-quantity" placeholder="Enter the No. of stock you brought"/>
+        </div>
+        <div class="inputField">
+        <label style="margin-right: 1rem;" for="stock-quantity">Quantity of Stocks
+            <input id="stock-quantity"/>
         </label>
-        <label for="current-price">Current Price
-            <input type="text" id="current-price" placeholder="Enter the current price of price here"/>
-        </label>
+        </div>
 
+        <div class="inputField">
+        <label style="margin-right:2.9rem;" for="current-price">Current Price
+            <input id="current-price" />
+        </label>
+        </div>
         <button id="submit-btn">Calculate!</button>
         <div id="output"></div>
     </div>
   
-      <script type="text/javascript" src="app.js"></script>
+      <script type="text/javascript" src="./index.js"></script>
     
 </body>
 </html>
