Added project link

--- a/index.html
+++ b/index.html
@@ -10,22 +10,13 @@
 <body>
     <div class="container">
         <h1>You Invest We Calculate!💰</h1>
-        <div class="inputField">
-        <label style="margin-right:3.5rem;" for="initial-price">Initial Price
-            <input id="initial-price">
-        </label>
-        </div>
-        <div class="inputField">
-        <label style="margin-right: 1rem;" for="stock-quantity">Quantity of Stocks
-            <input id="stock-quantity"/>
-        </label>
-        </div>
-
-        <div class="inputField">
-        <label style="margin-right:2.9rem;" for="current-price">Current Price
-            <input id="current-price" />
-        </label>
-        </div>
+        <label for="initial-price" style="font-size:18px;" >Initial Price</label>
+        <input id="initial-price"/>
+        <label for="stock-quantity" style="font-size:18px;">Quantity of Stocks</label>
+        <input id="stock-quantity" />
+        <label for="current-price" style="font-size:18px;">Current Price</label>
+        <input id="current-price"/>
+       
         <button id="submit-btn">Calculate!</button>
         <div id="output"></div>
     </div>
